--- a/Projects/QRcode/style.css
+++ b/Projects/QRcode/style.css
@@ -21,6 +21,11 @@ body{
     max-width: 410px;
     border-radius: 7px;
     padding: 16px 25px;
+    transition: height 0.2s ease;
+}
+
+.wrapper.active{
+    height: 530px;
 
 }
 
@@ -73,8 +78,11 @@ border-radius: 5px;
     border: 1px solid #ccc;
 }
 
-
-
+.wrapper.active .qr-code{
+    opacity: 1;
+    pointer-events: auto;
+    transition: opacity 0.5s 0.05s ease;
+}
 
 
 
